# internal/api/server.go
@@ -66,6 +66,9 @@ func (s Server) Handler() http.Handler {
 	mux.HandleFunc("GET /api/v1/build-runs", s.buildRuns)
 	mux.HandleFunc("POST /api/v1/build-runs", s.buildRuns)
 	mux.HandleFunc("GET /api/v1/build-runs/{namespace}/{name}", s.buildRun)
+	mux.HandleFunc("POST /api/v1/build-runs/{namespace}/{name}/cancel", s.cancelBuildRun)
+	mux.HandleFunc("POST /api/v1/build-runs/{namespace}/{name}/retry", s.retryBuildRun)
+	mux.HandleFunc("POST /api/v1/build-runs/{namespace}/{name}/rerun", s.rerunBuildRun)
 	mux.HandleFunc("GET /api/v1/build-runs/{namespace}/{name}/logs", s.buildRunLogs)
 	mux.HandleFunc("GET /api/v1/environments", s.environments)
 	mux.HandleFunc("GET /api/v1/releases", s.releases)
